--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello Coursera!</title>
-</head>
-<body>
-<h1>Hello Coursera! It's a great course</h1>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title> Coursera is Cool! </title>
+	</head>
+
+	<body>
+		<p> Coursera is so Cool! I'm learning <span>  SO </span> </p>
+	</body>
+
 </html>
