--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<meta http-equiv="refresh" content="0; url=https://github.com/Ahsanul-Ameen/coursera-tests/blob/master/module2-solution/index.html">
+<!DOCTYPE html>
+<html>
+<body>
 
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
 
+</body>
+</html>
