--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
+
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+<meta charset="utf-8">
+<title>Child Selector</title>
+<style>
 
-<h1>Heading 1</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-<h4>Heading 4</h4>
-<h5>Heading 5</h5>
-<h6>Heading 6</h6>
+/* any article element which is a direct child of a section element,i.e., any article element whose immediate parent is a section element. */
+section > article {
+  color: green;
+  font-size: 24px;
+}
+
+/* any h2 element which is a direct child of a section element,i.e., any h2 element whose immediate parent is a section element. */
+section > h2 {
+  color: green;
+}
+
+</style>
+</head>
+<body>
+<h1>Child Selector</h1>
+<section>
+  <h2>Subheading 1</h2>
+  <div>
+    <article>ARTICLE which inside DIV, which is inside SECTION</article>
+  </div>
+</section>
+<section>
+  <article>ARTICLE as a direct child of the SECTION element.</article>
+</section>
+<h2>Subheading 2</h2>
 
 </body>
 </html>
