--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -4,24 +4,94 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <title>Boostrap Starter Page</title>
+    <title>Food, LLC</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
 <body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
 
-  <h1>Hello Coursera!</h1>
+          <!-- 8. Navbar   -->
+          <div class="navbar-brand">  
+            <a href="index.html"><h1>Food, LLC</h1></a>
+          </div>
+
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li>
+              <a href="#">
+                <span class="visible-xs">Chicken</span>
+              </a>
+              <hr>
+            </li>
+            <li>
+              <a href="#">
+                <span class="visible-xs">Beef</span>
+              </a>            
+              <hr>
+            </li>
+            <li>
+              <a href="#">
+                <span class="visible-xs">Sushi</span>
+              </a>
+              <hr>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
+  </header>
+
+  <div id="main-content" class="container">
+    <div id="menu">
+      <h2 class="text-center">Our Menu</h2>
+    </div>
+
+    <div id="home-tiles" class="row">
+          <section id="menu-tile" class="col-xs-12">
+            <span>Chicken</span> <br>
+            <div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident in eos molestiae iste deserunt dicta, 
+                tempore eaque laboriosam ipsam nisi consectetur voluptatem asperiores facere sapiente est. Placeat quod voluptates beatae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident in eos molestiae iste deserunt dicta, 
+                tempore eaque laboriosam ipsam nisi consectetur voluptatem asperiores facere sapiente est. Placeat quod voluptates beatae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident in eos molestiae iste deserunt dicta, 
+                tempore eaque laboriosam ipsam nisi consectetur voluptatem asperiores facere sapiente est. Placeat quod voluptates beatae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident in eos molestiae iste deserunt dicta, 
+                tempore eaque laboriosam ipsam nisi consectetur voluptatem asperiores facere sapiente est. Placeat quod voluptates beatae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident in eos molestiae iste deserunt dicta, 
+                tempore eaque laboriosam ipsam nisi consectetur voluptatem asperiores facere sapiente est. Placeat quod voluptates beatae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident in eos molestiae iste deserunt dicta, 
+                tempore eaque laboriosam ipsam nisi consectetur voluptatem asperiores facere sapiente est. Placeat quod voluptates beatae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident in eos molestiae iste deserunt dicta, 
+                tempore eaque laboriosam ipsam nisi consectetur voluptatem asperiores facere sapiente est. Placeat quod voluptates beatae.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident in eos molestiae iste deserunt dicta, 
+                tempore eaque laboriosam ipsam nisi consectetur voluptatem asperiores facere sapiente est. Placeat quod voluptates beatae.
+              </p>
+            </div>
+          </section>
+       
+      
+    </div><!-- End of #home-tiles -->
+  </div><!-- End of #main-content -->
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
